Thu Jun 30 04:33:35 2005 ming xiong <mxiong@dre.vanderbilt.edu>

       * DAnCE/ComponentPackager/Base_Packager.h
       * DAnCE/ComponentPackager/CPK_Packager.cpp
       * DAnCE/ComponentPackager/CPK_Packager.h
       * DAnCE/ComponentPackager/PDL_Handler.cpp
       * DAnCE/ComponentPackager/PDL_Handler.h
       * DAnCE/ComponentPackager/Base_Packager.cpp
       
       Added a release operation for destructor of PDL_Handler;Changed the
       definition of input parameter for CPK_Packager::createPackager to const
       to indicate it can not be changed
       
Thu Jun 30 00:37:35 EDT 2005 Stoyan Paunov <s.paunov@vanderbilt.edu>

	* RMadmin.cpp
	* RepositoryManager.cpp
	* ZIP_Wrapper.cpp
	* ZIP_Wrapper.h
	* new_RepositoryManager_Impl.cpp
	* new_RepositoryManager_Impl.h

	removed the "@file" comments which apparently confuse Doxygen.


Wed Jun 29 17:00:57 2005  Cassia Tatibana  <cassia@dre.vanderbilt.edu>

       * DAnCE/ExecutionManager/DAM_Map.cpp:
       * DAnCE/ExecutionManager/Execution_Manager_Impl.cpp:

         Added CIAO_TRACE messages.

Wed Jun 29 16:38:42 2005  Ming Xiong <mxiong@dre.vanderbilt.edu>

        * DAnCE/ComponentPackager/Base_Packager.h
        * DAnCE/ComponentPackager/CPK_Packager.h
        * DAnCE/ComponentPackager/CPK_Packager.h
        
        Changed a couplfe of places to meet the Doxygen test and TChar test for
        bin/fuzz.pl

Wed Jun 29 16:28:52 2005  William Otte  <wotte@dre.vanderbilt.edu>

	* DAnCE/DomainApplicationManager/Deployment_Configuration.cpp
	* DAnCE/DomainApplicationManager/DomainApplicationManager_Impl.cpp
	* DAnCE/NodeApplicationManager/NodeApplicationManager_Impl.cpp
	* DAnCE/NodeApplicationManager/NodeApplicationManager_Impl.h
	* DAnCE/NodeManager/NAM_Map.cpp
	* DAnCE/NodeManager/NAM_Map.h
	* DAnCE/NodeManager/NodeDaemon.mpc
	* DAnCE/NodeManager/NodeDaemon_Impl.cpp
	* DAnCE/NodeManager/NodeDaemon_Impl.h
	* DAnCE/NodeManager/Node_Daemon.cpp
	* DAnCE/ciao/Deployment.idl
